--- a/app/src/main/res/layout/layout_info_person.xml
+++ b/app/src/main/res/layout/layout_info_person.xml
@@ -21,7 +21,7 @@
 
         <ImageView
             android:id="@+id/ivhome"
-            android:paddingLeft="10dp"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             android:tint="@color/colorWhite"/>
 
         <TextView
-            android:layout_marginRight="34dp"
+            android:layout_marginRight="44dp"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_width="match_parent"
