--- a/app/src/main/res/layout/layout_quan_an.xml
+++ b/app/src/main/res/layout/layout_quan_an.xml
@@ -19,7 +19,7 @@
         android:layout_centerHorizontal="true"
         android:text="Quán ăn"
         android:textColor="@color/colorWhite"
-        android:textSize="25sp"
+        android:textSize="27sp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/nabila"/>
 
@@ -30,16 +30,16 @@
         android:layout_alignParentBottom="false"
         android:layout_marginTop="80dp"
         android:orientation="vertical"
-        android:padding="45dp"
+        android:padding="40dp"
         >
 
         <Button
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnXemMon"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Xem danh sách món ăn"
             android:textSize="20sp"
@@ -49,9 +49,9 @@
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnThemMon"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Thêm món ăn"
             android:textSize="20sp"
@@ -61,9 +61,9 @@
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnSuaMon"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/duongvien_xanh"
             android:text= "Sửa món ăn"
             android:textSize= "20sp"
@@ -73,9 +73,9 @@
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnXoaMon"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Xóa món ăn"
             android:textSize="20sp"
@@ -85,9 +85,9 @@
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnXemDonHang"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Xem các đơn đặt hàng"
             android:textSize="20sp"
