--- a/app/src/main/res/layout/layout_food_detail.xml
+++ b/app/src/main/res/layout/layout_food_detail.xml
@@ -27,6 +27,7 @@
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
+                android:background="@color/colorWhite"
                 />
 
             <android.support.v7.widget.Toolbar
@@ -131,7 +132,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:layout_weight="9"
+                            android:layout_weight="7"
                             android:padding="7dp"
                             android:text="15000đ"
                             android:textColor="#1A554E"
@@ -152,6 +153,7 @@
                         app:textColor="#000000"
                         app:textSize="10sp">
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+
                 </LinearLayout>
 
             <android.support.v7.widget.CardView
