--- a/app/src/main/res/layout/layout_them_mon.xml
+++ b/app/src/main/res/layout/layout_them_mon.xml
@@ -37,7 +37,7 @@
             android:layout_margin="@dimen/size15dp"
             android:background="@drawable/vienxanhla"
             android:hint="Tên món ăn"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
             android:padding="@dimen/size10dp"
             android:singleLine="true"
             android:textColor="@color/colorBlack"
@@ -85,19 +85,20 @@
         android:layout_marginLeft="250dp"/>
 
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="480dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="490dp">
 
         <Button
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnThemMonLayoutThemMon"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/size10dp"
             android:layout_weight="1"
             android:background="@drawable/duongvien_xanh"
             android:text="Thêm"
