--- a/app/src/main/res/layout/layout_them_quan.xml
+++ b/app/src/main/res/layout/layout_them_quan.xml
@@ -115,11 +115,11 @@
             />
 
         <LinearLayout
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5dp"
-            android:layout_marginLeft="65dp">
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp">
 
             <Button
                 android:layout_gravity="center"
