--- a/app/src/main/res/layout/layout_xoa_quan.xml
+++ b/app/src/main/res/layout/layout_xoa_quan.xml
@@ -51,19 +51,20 @@
 
 
         <LinearLayout
-            android:layout_width="250dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="@dimen/size10dp"
-            android:layout_marginLeft="65dp">
+            android:layout_marginRight="60dp"
+            android:layout_marginLeft="60dp">
 
             <Button
+                android:gravity="center"
                 android:layout_gravity="center"
                 android:textColor="@color/colorWhite"
                 android:id="@+id/btnXoaQuan"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/size10dp"
                 android:layout_weight="1"
                 android:background="@drawable/duongvien_xanh"
                 android:text="Xóa"
