notificaton + update info

--- a/app/src/main/res/layout/dialog_confirmcart.xml
+++ b/app/src/main/res/layout/dialog_confirmcart.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="190dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhite"
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:paddingTop="10dp"
-    >
+    android:paddingTop="10dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,19 +29,28 @@
         android:layout_marginTop="35dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nhập địa chỉ giao hàng"
+        android:text="Vui lòng điền thông tin"
         android:textColor="@color/colorBlack"
         android:textSize="17sp"
         android:textStyle="italic"/>
 
-    <EditText
+
+    <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/diachigiaohang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="77dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        android:singleLine="true"
+        android:layout_marginTop="68dp"
+        android:hint="Địa chỉ giao hàng"
+        android:text=""
+        android:inputType="text"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:met_baseColor="@color/colorPrimary"
+        app:met_floatingLabel="highlight"
+        app:met_primaryColor="@color/colorPrimary"
+        app:met_singleLineEllipsis="true"
         />
 
 
@@ -50,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Xác nhận"
-        android:textColor="#134934"
+        android:textColor="@color/colorBlack"
         android:textSize="17sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
@@ -65,7 +74,7 @@
         android:layout_marginRight="35dp"
         android:layout_alignParentBottom="true"
         android:text="Hủy"
-        android:textColor="#134934"
+        android:textColor="@color/colorBlack"
         android:textSize="17sp"
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
