--- a/app/src/main/res/layout/layout_food_detail.xml
+++ b/app/src/main/res/layout/layout_food_detail.xml
@@ -147,11 +147,11 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="18dp"
-                        app:backGroundColor="#4FC3F7"
+                        app:backGroundColor="@color/colorPrimary"
                         app:finalNumber="50"
                         app:initialNumber="1"
-                        app:textColor="#000000"
-                        app:textSize="10sp">
+                        app:textColor="@color/colorWhite"
+                        app:textSize="12sp">
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
                 </LinearLayout>
@@ -204,7 +204,7 @@
                         android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_weight="8.7"
+                        android:layout_weight="9.7"
                         android:background="@color/colorWhite"
                         android:id="@+id/food_description"
                         android:layout_width="0dp"
@@ -217,10 +217,18 @@
                         android:textSize="16sp" />
 
 
+
+
                     </LinearLayout>
 
 
+
+
+
+
+
                 </LinearLayout>
+
 
 
             </android.support.v7.widget.CardView>
@@ -265,6 +273,17 @@
     </android.support.v4.widget.NestedScrollView>
 
 
-
+    <com.andremion.counterfab.CounterFab
+        android:id="@+id/call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_call_black_24dp"
+        android:tint="@color/colorWhite"
+        app:pressedTranslationZ="12dp"
+        app:elevation="5dp"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
