--- a/app/src/main/res/layout/layout_info_person.xml
+++ b/app/src/main/res/layout/layout_info_person.xml
@@ -72,60 +72,70 @@
             android:layout_height="1dp"
             android:textColor="#FF9100"
             android:paddingLeft="10dp"
-            android:background="#E41D1B1A"
+            android:background="@color/colorGray"
             android:layout_marginTop="35dp"/>
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/tvtenKhachHang"
-            android:layout_width="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:padding="15dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Họ tên"
-            android:textColor="@color/colorBlack"/>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/tvtentaikhoan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="ten tk"
-            android:textColor="@color/colorBlack"/>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/tvdiachikhachhang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="dia chi"
-            android:textColor="@color/colorBlack"/>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/tvsdtkhachhang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="sdt"
-            android:textColor="@color/colorBlack"/>
-    </LinearLayout>
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvtenKhachHang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="Họ tên"
+                android:textColor="@color/colorBlack"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/tvtentaikhoan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="ten tk"
+                android:textColor="@color/colorBlack"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/tvdiachikhachhang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="dia chi"
+                android:textColor="@color/colorBlack"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/tvsdtkhachhang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="sdt"
+                android:textColor="@color/colorBlack"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 
     <Button
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="400dp"
         android:id="@+id/btnUpdateInfo"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="300dp"
         android:background="#17881B"
         android:text="Cập nhật thông tin"
-        android:textColor="@color/colorWhite"
         android:textAllCaps="false"
-        android:textSize="16sp"/>
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp" />
 
 
 
